--- a/index.html
+++ b/index.html
@@ -8,8 +8,36 @@
    <script defer src="script.js"></script>
 </head>
 <body>
-    <main>
-        
+    <main class="mainContent">
+        <h1 class="mainHeader">Freelancer forum</h1>
+        <!-- <h3>The average starting price is $40</h3> -->
+        <p class="mainHeader">The average starting price is $40.</p>
+
+        <h2 class="mainHeader">Available Freelancers</h2>
+
+        <table class="tableContent">
+            <tr>
+                <th>Name</th>
+                <th>Occupation</th>
+                <th>Starting Price</th>
+            </tr>
+            <tr>
+                <td>Alice</td>
+                <td>Writer</td>
+                <td> $30</td>
+            </tr>
+            <tr>
+                <td>Bob</td>
+                <td>Teacher</td>
+                <td> $50</td>
+            </tr>
+            <tr>
+                <td>Carol</td>
+                <td>Programer</td>
+                <td> $70</td>
+            </tr>
+        </table>
+
     </main>
     
 </body>
